doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\Stam\Desktop\Java-C++ file\OO_Project
-d
C:\Users\Stam\Desktop\Java-C++ file\OO_Project\doc
-encoding
windows-1253
-charset
windows-1253
C:\Users\Stam\Desktop\Java-C++ file\OO_Project\ShopingCart.java
<---- end of javadoc command ---->
Loading source file C:\Users\Stam\Desktop\Java-C++ file\OO_Project\ShopingCart.java...
C:\Users\Stam\Desktop\Java-C++ file\OO_Project\ShopingCart.java:14: error: invalid method declaration; return type required
   public addItemOrdered(){
          ^
C:\Users\Stam\Desktop\Java-C++ file\OO_Project\ShopingCart.java:19: error: invalid method declaration; return type required
   public removeItemOrdered(){
          ^
C:\Users\Stam\Desktop\Java-C++ file\OO_Project\ShopingCart.java:25: error: invalid method declaration; return type required
   public changeItemOrderedQuantity(){
          ^
C:\Users\Stam\Desktop\Java-C++ file\OO_Project\ShopingCart.java:30: error: invalid method declaration; return type required
   public showCart(){
          ^
C:\Users\Stam\Desktop\Java-C++ file\OO_Project\ShopingCart.java:36: error: invalid method declaration; return type required
   public clearCart(){
          ^
C:\Users\Stam\Desktop\Java-C++ file\OO_Project\ShopingCart.java:41: error: invalid method declaration; return type required
   public checkout(){
          ^
C:\Users\Stam\Desktop\Java-C++ file\OO_Project\ShopingCart.java:46: error: invalid method declaration; return type required
   public calculateNet(){
          ^
C:\Users\Stam\Desktop\Java-C++ file\OO_Project\ShopingCart.java:51: error: invalid method declaration; return type required
   public calcluateCourierCost(){
          ^
8 errors
